--- a/src/Components/TaskandProject.module.css
+++ b/src/Components/TaskandProject.module.css
@@ -4,9 +4,1095 @@
 }
 .div1
 {
-     width: 81%;
+    width: 81%;
     height: 650px;
+    display: flex;
     position: absolute;
     top: 72px;
     left: 298px;
+  
+}
+.box1
+{
+    width: 94%;
+    height: 650px;
+   
+    overflow-y:scroll;
+}
+.box1::-webkit-scrollbar{
+    width: 5px;
+}
+
+.box1div1 {
+
+    display: flex;
+    align-items: end;
+    width: 98%;
+    height: 100px;
+    border-radius: 5px;
+    margin-left: 10px;
+
+}
+
+.box1div1 ul {
+    width: 100%;
+    height: 70px;
+    list-style-type: none;
+    display: flex;
+
+
+}
+
+.firstbutton {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 190px;
+    height: 50px;
+    background-color: rgb(110, 112, 185);
+    border: none;
+    outline: none;
+    color: white;
+}
+
+.firstbutton span {
+    font-size: 32px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+.firstbutton svg {
+    position: relative;
+}
+
+.secondbutton {
+    margin-left: 25px;
+    position: relative;
+    top: 5px;
+    width: 150px;
+    height: 43px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    background-color: rgb(43, 179, 116);
+    color: lightgray;
+}
+
+.secondbutton span {
+    font-size: large;
+    color: white;
+}
+
+.thirdbutton {
+    margin-left: 10px;
+    display: flex;
+    position: relative;
+    top: 5px;
+    justify-content: space-around;
+    align-items: center;
+    width: 130px;
+    height: 43px;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: rgba(248, 246, 247, 0.2);
+}
+
+.thirdbutton:hover {
+    background-color: rgb(132, 154, 182);
+}
+
+.thirdbutton span {
+    font-size: 18px;
+
+}
+
+.fourbutton {
+    margin-left: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+    height: 43px;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    position: relative;
+    top: 5px;
+
+    color: white;
+    background-color: rgb(132, 154, 182);
+}
+
+.fourbutton:hover {
+    background-color: rgb(132, 154, 182);
+}
+
+.fourbutton input {
+    position: relative;
+    left: 5px;
+    display: flex;
+    width: 90%;
+    height: 43px;
+    font-size: large;
+    border-radius: 15px;
+    background-color: white;
+    outline: none;
+    border: none;
+    color: white;
+    background-color: rgb(132, 154, 182);
+
+}
+
+.fourbutton input:hover {
+    background-color: rgb(132, 154, 182);
+}
+
+.fivebutton {
+    position: relative;
+    top: 5px;
+    left: 5px;
+    border: none;
+    outline: none;
+    width: 44px;
+    height: 43px;
+    border-radius: 10px;
+    background-color: rgba(248, 246, 247, 0.2);
+
+}
+
+.problemcreate {
+    width: 630px;
+
+
+}
+
+.fivebutton:hover {
+    background-color: rgb(132, 154, 182);
+  
+}
+.sixbutton
+{
+    position: relative;
+    top: 5px;
+    left: 5px;
+    margin-left: 10px;
+    border: none;
+    outline: none;
+    width: 44px;
+    height: 43px;
+    border-radius: 10px;
+    background-color: rgba(248, 246, 247, 0.2);
+}
+
+.div1abox2 {
+    display: flex;
+    width: 98%;
+    height: 50px;
+
+    border-radius: 5px;
+    margin-left: 10px;
+}
+
+.div1abox2a {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 60%;
+    height: 50px;
+
+
+}
+
+.div1abox2a1 {
+    width: 49%;
+    height: 35px;
+    border-radius: 10px;
+    background-color: rgba(248, 246, 247, 0.2);
+
+}
+
+.div1abox2a1 ul li {
+
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 16px;
+}
+
+.kanban {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+
+
+.gantt
+{
+
+     border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.div1abox2a1 ul {
+
+    display: flex;
+    list-style-type: none;
+}
+
+.div1abox2a1 ul li:hover {
+    background-color: rgb(190, 199, 212, 0.3);
+
+}
+
+.div1abox2a2 {
+    position: relative;
+    right: 13px;
+    width: 43%;
+    height: 35px;
+    border-radius: 10px;
+    background-color: rgba(248, 246, 247, 0.2);
+
+}
+
+
+.div1abox2a2 ul li {
+
+    gap: 10px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 16px;
+}
+
+.inbound {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.more {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.div1abox2a2 ul {
+
+    display: flex;
+    list-style-type: none;
+
+}
+
+.div1abox2a2 ul li:hover {
+    background-color: rgb(190, 199, 212, 0.3);
+
+}
+
+.div1abox2b {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    width: 40%;
+    height: 50px;
+
+}
+
+.div1abox2b1 {
+
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+
+    width: 37%;
+    height: 35px;
+
+    border-radius: 10px;
+    background-color: rgba(248, 246, 247, 0.2);
+
+}
+
+.div1abox2b1:hover {
+    background-color: rgb(190, 199, 212, 0.3);
+}
+
+.div1abox2b2 {
+    width: 25%;
+    height: 35px;
+
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    background-color: rgba(248, 246, 247, 0.2);
+
+
+
+}
+
+.div1abox2b2:hover {
+    background-color: rgb(190, 199, 212, 0.3);
+}
+
+.box1div4 ul {
+    width: 60%;
+    height: 60%;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.box1div4  ul li button {
+    width: 90px;
+    height: 30px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: rgba(248, 246, 247, 0.2);
+    font-size: 16px;
+}
+
+
+.box2
+{
+    width: 6%;
+    height: 650px;
+   
+}
+
+.div1b1 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 170px;
+
+}
+
+.div1b1 ul {
+    position: relative;
+    top: 15px;
+
+    width: 50%;
+    height: 140px;
+    list-style: none;
+
+}
+
+.div1b1 ul li {
+    margin-left: 3px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    width: 35px;
+    height: 35px;
+    color: white;
+    border-radius: 50%;
+    background-color: rgba(182, 190, 206, 0.2);
+
+}
+
+.div1b1 ul li:hover {
+    background-color: rgb(219, 225, 236, 0.2);
+}
+
+.div1b2 {
+    width: 100%;
+    height: 220px;
+
+}
+
+.div1b2 ul {
+    width: 100%;
+    height: 220px;
+    position: relative;
+    left: 5px;
+    list-style: none;
+}
+
+.div1b2 ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 51px;
+
+
+}
+
+.div1b2 ul li:hover {
+    background-color: rgb(219, 225, 236, 0.2);
+}
+
+.div1b2 ul li div {
+    width: 36px;
+    height: 36px;
+
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    background-color: rgb(47, 198, 246);
+
+}
+
+.icon1 {
+    background: linear-gradient(360deg, rgb(47, 198, 246), rgb(89, 242, 87));
+}
+
+.box1div3
+{
+    width: 100%;
+    height: 660px;
+   
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.johribhaiya
+{
+    display: flex;
+    width: 100%;
+    height: 660px;
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+    gap: 5px;
+    white-space: nowrap;
+}
+.johribhaiya::-webkit-scrollbar {
+  height: 6px;        
+}
+
+
+.johribhaiya::-webkit-scrollbar-track {
+  background: transparent;   
+}
+
+
+.johribhaiya::-webkit-scrollbar-thumb {
+  background: rgba(150, 150, 150, 0.6);
+  border-radius: 10px;        
+}
+
+.johribhaiyabox1 {
+    width: 26%;
+    height: 660px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    margin-right: 1px;
+    border-left:2px dotted white;
+     border-right:2px dotted white;
+      border-bottom:2px dotted white;
+}
+
+.johribhaiyabox1div1 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 45px;
+    border-radius: 5px;
+    color: lightgray;
+    background-color: rgb(255,87,82);
+    
+}
+
+.johribhaiyabox1div1 p {
+    position: relative;
+    left: 17px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 70%;
+    height: 20px;
+
+}
+
+.johribhaiyabox1div1 p span {
+    color: black;
+}
+.johribhaiyabox1div2 {
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+}
+
+.johribhaiyabox1div2 ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.johribhaiyabox1div2 ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    height: 35px;
+    position: relative;
+    top: 3px;
+    border-radius: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    background-color: rgb(158,165,193);
+}
+.johribhaiyabox1div2 ul li svg {
+    position: relative;
+    right: 5px;
+
+}
+
+.johribhaiyabox1div3 {
+    width: 100%;
+    height: 500px;
+    margin-top: 10px;
+  
+  
+}
+
+
+.johribhaiyabox2 {
+    width: 26%;
+    height: 660px;
+    border-radius: 5px;
+    margin-right: 1px;
+     flex-shrink: 0;
+    border-right: 2px  dotted white;
+    border-bottom:  2px  dotted white;
+}
+
+.johribhaiyabox2div1 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 45px;
+
+    border-radius: 5px;
+    color: lightgray;
+    background-color: rgb(123,213,0);
+
+}
+
+.johribhaiyabox2div1 p {
+    position: relative;
+    left: 17px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 70%;
+    height: 20px;
+
+}
+
+.johribhaiyabox2div1 p span {
+    color: black;
+}
+.johribhaiyabox2div2 {
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+}
+
+.johribhaiyabox2div2 ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.johribhaiyabox2div2 ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    height: 35px;
+    position: relative;
+    top: 3px;
+    border-radius: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+.johribhaiyabox2div2 ul li svg {
+    position: relative;
+    right: 5px;
+
+}
+
+.johribhaiyabox2div3 {
+    width: 100%;
+    height: 500px;
+    margin-top: 10px;
+}
+.johribhaiyabox3 {
+    width: 26%;
+     flex-shrink: 0;
+    height: 660px;
+    border-radius: 5px;
+    margin-right: 1px;
+    border-right: 2px  dotted white;
+    border-bottom:  2px  dotted white;
+}
+
+.johribhaiyabox3div1 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 45px;
+
+    border-radius: 5px;
+    color: lightgray;
+    background-color: rgb(47,198,246);
+
+}
+
+.johribhaiyabox3div1 p {
+    position: relative;
+    left: 17px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 70%;
+    height: 20px;
+
+}
+
+.johribhaiyabox3div1 p span {
+    color: black;
+}
+.johribhaiyabox3div2 {
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+
+
+}
+
+.johribhaiyabox3div2 ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.johribhaiyabox3div2 ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    height: 35px;
+    position: relative;
+    top: 3px;
+    border-radius: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    
+}
+
+.johribhaiyabox3div2 ul li svg {
+    position: relative;
+    right: 5px;
+
+}
+
+.johribhaiyabox3div3 {
+    width: 100%;
+    height: 500px;
+    margin-top: 10px;
+}
+
+
+
+
+
+.johribhaiyabox4 {
+    width: 26%;
+     flex-shrink: 0;
+    height: 660px;
+    border-radius: 5px;
+    margin-right: 1px;
+    border-right: 2px  dotted white;
+    border-bottom:  2px  dotted white;
+}
+
+.johribhaiyabox4div1 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 45px;
+
+    border-radius: 5px;
+    color: lightgray;
+    background-color: rgb(85,208,224);
+
+}
+
+.johribhaiyabox4div1 p {
+    position: relative;
+    left: 17px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 70%;
+    height: 20px;
+
+}
+
+.johribhaiyabox4div1 p span {
+    color: black;
+}
+.johribhaiyabox4div2 {
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+
+
+}
+
+.johribhaiyabox4div2 ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.johribhaiyabox4div2 ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    height: 35px;
+    position: relative;
+    top: 3px;
+    border-radius: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+
+
+}
+.johribhaiyabox4div2 ul li svg {
+    position: relative;
+    right: 5px;
+
+}
+
+.johribhaiyabox4div3 {
+    width: 100%;
+    height: 500px;
+    margin-top: 10px;
+}
+
+
+.johribhaiyabox5 {
+    width: 26%;
+     flex-shrink: 0;
+    height: 660px;
+    border-radius: 5px;
+    margin-right: 1px;
+    border-right: 2px  dotted white;
+    border-bottom:  2px  dotted white;
+}
+
+.johribhaiyabox5div1 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 45px;
+
+    border-radius: 5px;
+    color: lightgray;
+    background-color: rgb(158,172,194);
+
+}
+.johribhaiyabox5div1 p {
+    position: relative;
+    left: 17px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 70%;
+    height: 20px;
+
+}
+
+.johribhaiyabox5div1 p span {
+    color: black;
+}
+.johribhaiyabox5div2 {
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+
+
+}
+
+.johribhaiyabox5div2 ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.johribhaiyabox5div2 ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    height: 35px;
+    position: relative;
+    top: 3px;
+    border-radius: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+
+
+
+}
+.johribhaiyabox5div2 ul li svg {
+    position: relative;
+    right: 5px;
+
+}
+
+.johribhaiyabox5div3 {
+    width: 100%;
+    height: 500px;
+    margin-top: 10px;
+}
+
+.johribhaiyabox6 {
+    width: 26%;
+    height: 660px;
+     flex-shrink: 0;
+    border-radius: 5px;
+    margin-right: 1px;
+    border-right: 2px  dotted white;
+    border-bottom:  2px  dotted white;
+}
+
+.johribhaiyabox6div1 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 45px;
+    border-radius: 5px;
+    color: lightgray;
+    background-color: rgb(51,115,187);
+
+}
+
+.johribhaiyabox6div1 p {
+    position: relative;
+    left: 17px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 70%;
+    height: 20px;
+
+}
+
+.johribhaiyabox6div1 p span {
+    color: black;
+}
+.johribhaiyabox6div2 {
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+
+
+}
+
+.johribhaiyabox6div2 ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.johribhaiyabox6div2 ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    height: 35px;
+    position: relative;
+    top: 3px;
+    border-radius: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    
+}
+.johribhaiyabox6div2 ul li svg {
+    position: relative;
+    right: 5px;
+
+}
+
+.johribhaiyabox6div3 {
+    width: 100%;
+    height: 500px;
+    margin-top: 10px;
+}
+
+.johrib
+{
+    display: flex;
+    width: 100%;
+    height: 660px;
+   
+     display: flex;
+  overflow-x: auto;
+  overflow-y: hidden;
+   white-space: nowrap;
+
+}
+.johribbox1 {
+    width: 30%;
+    height: 660px;
+    border-radius: 5px;
+    margin-right: 1px;
+    border-left:2px dotted white;
+     border-right:2px dotted white;
+      border-bottom:2px dotted white;
+}
+
+.johribbox1div1 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 45px;
+    border-radius: 5px;
+    color: lightgray;
+    background-color: rgb(0,196,251);
+    
+}
+
+.johribbox1div1 p {
+    position: relative;
+    left: 17px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 70%;
+    height: 20px;
+
+}
+
+.johribbox1div1 p span {
+    color: black;
+}
+.johribbox1div2 {
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+}
+
+.johribbox1div2 ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.johribbox1div2 ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    height: 35px;
+    position: relative;
+    top: 3px;
+    border-radius: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    background-color: rgb(158,165,193);
+}
+.johribbox1div2 ul li svg {
+    position: relative;
+    right: 5px;
+
+}
+
+.johribbox1div3 {
+    width: 100%;
+    height: 500px;
+    margin-top: 10px;
+  
+  
+}
+
+
+.johribbox2 {
+    width: 30%;
+    height: 660px;
+    border-radius: 5px;
+    margin-right: 1px;
+    border-right: 2px  dotted white;
+    border-bottom:  2px  dotted white;
+}
+
+.johribbox2div1 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 45px;
+
+    border-radius: 5px;
+    color: lightgray;
+    background-color: rgb(79,209,226);
+
+}
+
+.johribbox2div1 p {
+    position: relative;
+    left: 17px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 70%;
+    height: 20px;
+
+}
+
+.johribbox2div1 p span {
+    color: black;
+}
+.johribbox2div2 {
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+}
+
+.johribbox2div2 ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.johribbox2div2 ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    height: 35px;
+    position: relative;
+    top: 3px;
+    border-radius: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+.johribbox2div2 ul li svg {
+    position: relative;
+    right: 5px;
+
 }
