--- a/src/BodyLeftside.module.css
+++ b/src/BodyLeftside.module.css
@@ -41,23 +41,43 @@
 
 .increasesize1
 {
-max-height: 0px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 1s ease;
+   padding: 0 10px;
+}
+.showDiv {
+   max-height: 500px;
+   background-color: rgb(179, 165, 174, 0.2);
+   border-radius: 5px;
+    padding: 10px;  
+   
+}
+.increasesize12
+{
+max-height: 0;
+  overflow: hidden;
+  transition: max-height 1s ease;
+   padding: 0 10px;
+}
+.showDiv1 {
+   max-height: 100px;
+   background-color: rgb(179, 165, 174, 0.2);
+   border-radius: 5px;
+    padding: 10px;  
+   
 }
 .increasesize2 {
    position: relative;
    bottom: 5px;
    width: 100%;
    height: 100px; 
+
     border-bottom-left-radius: 5px;
     border-bottom-Right-radius: 5px;
     background-color: rgb(179, 165, 174, 0.2);
 }
-.showDiv {
-  max-height: 405px;
-  
-   background-color: rgb(179, 165, 174, 0.2);
-   border-radius: 5px;
-}
+
 .list {
     position: relative;
     top: 3px;
