--- a/src/BodyRightside.module.css
+++ b/src/BodyRightside.module.css
@@ -18,6 +18,19 @@
     height: 70px;
    
 }
+.box1a span{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: x-large;
+    font-weight: bolder;
+    position: relative;
+    top: 30px;
+    left: 30px;
+    color: white;
+}
+.box1a span a{
+    text-decoration: none;
+    color: white;
+}
 /* ----------------------box1b-------------------------- */
 .box1b
 {
