--- a/src/Components/CRNKanban.module.css
+++ b/src/Components/CRNKanban.module.css
@@ -8,13 +8,25 @@
     display: flex;
     width: 100%;
     height: 660px;
-  
+    overflow-x: auto;
+    overflow-y: hidden;
+    gap: 5px;
 }
-
-
+.div1::-webkit-scrollbar{
+    height: 6px;
+}
+.div1::-webkit-scrollbar-track{
+    background-color: rgb(132, 154, 182);
+    border-radius: 5px;
+}
+.div1::-webkit-scrollbar-thumb {
+   background-color: rgb(168, 183, 203);
+  border-radius: 10px;        /* round edges */
+}
 
 .box1 {
     width: 26%;
+     flex-shrink: 0;
     height: 660px;
     border-radius: 5px;
     margin-right: 1px;
@@ -66,9 +78,7 @@
 .box1div3 {
     width: 100%;
     height: 40px;
-   
-
-
+    
 }
 
 .box1div3 ul {
@@ -210,6 +220,7 @@
 
 .box2 {
        width: 24%;
+        flex-shrink: 0;
     height: 660px;
 
     margin-right: 1px;
@@ -313,6 +324,7 @@
 
 .box3 {
      width: 24%;
+      flex-shrink: 0;
     height: 660px;
     margin-right: 1px;
        border-right: 2px  dotted white;
@@ -411,6 +423,7 @@
 
 .box4 {
        width: 24%;
+        flex-shrink: 0;
     height: 660px;
     border-radius: 5px;
     margin-right: 1px;
@@ -511,6 +524,7 @@
 .box5 {
        width: 24%;
     height: 660px;
+    flex-shrink: 0;
     border-radius: 5px;
     margin-right: 1px;
        border-right: 2px  dotted white;
