--- a/src/Components/Webmail.module.css
+++ b/src/Components/Webmail.module.css
@@ -4,9 +4,96 @@
 }
 .div1
 {
-      width: 81%;
+    width: 94%;
     height: 650px;
     position: absolute;
-    top: 72px;
-    left: 298px;
+    top: 30px;
+    left: 30px;
+    bottom: 40px;
+    background-color: rgb(99,130,176);
+    border-radius: 10px;
+    
+    
+  
+
+}
+.div1a
+{
+    width: 100%;
+    height: 70px;
+    display: flex;
+    align-items: center;
+}
+.div1a p span{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 34px;
+}
+.div1a p{
+    color: white;
+    position: relative;
+    left: 20px;
+}
+.div1b
+{
+    width: 100%;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.div1b span{
+      font-family: Arial, Helvetica, sans-serif;
+    font-size: 34px;
+    color: white;
+    position: relative;
+    top: 20px;
+}
+.div1c
+{
+    width: 100%;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box
+{
+    width:90%;
+    height: 350px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  
+}
+.box1
+{
+    width: 250px;
+    height: 140px;
+ 
+    border-radius: 10px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.box1 ul{
+    width: 50%;
+    height: 80px;
+   
+    list-style: none;
+   
+}
+.box1 ul li{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 38px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+}
+.box1 ul li img{
+    width: 40px;
+}
+.box1 ul li  span{
+   color: rgb(199, 198, 198);
 }
