--- a/src/Components/Workgroup.module.css
+++ b/src/Components/Workgroup.module.css
@@ -9,4 +9,371 @@
     position: absolute;
     top: 72px;
     left: 298px;
+   
+    display: flex;
+}
+.box1
+{
+    width: 94%;
+    height: 650px;
+    overflow-y: scroll;
+}
+.box1::-webkit-scrollbar{
+    width: 5px;
+}
+
+
+.box1div1
+{
+    width:98%;
+    height: 80px;
+    position: relative;
+    left: 10px;
+   
+
+}
+.box1div1 ul {
+    width: 100%;
+    height: 70px;
+    list-style-type: none;
+    display: flex;
+   
+
+
+}
+
+.firstbutton {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 400px;
+    height: 50px;
+    background-color: rgb(110, 112, 185);
+    border: none;
+    outline: none;
+    color: white;
+   
+
+
+}
+
+.firstbutton span {
+    font-size: 32px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+.firstbutton svg {
+    position: relative;
+}
+
+.secondbutton {
+    margin-left: 25px;
+    position: relative;
+    top: 5px;
+    width: 120px;
+    height: 43px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    background-color: rgb(43, 179, 116);
+    color: lightgray;
+    
+}
+
+.secondbutton span {
+    font-size: large;
+    color: white;
+}
+.thirdbutton
+{
+    width: 200px;
+    height: 43px;
+    display: flex;
+    justify-content: end;
+   
+}
+.thirdbutton button
+{
+    margin-left: 25px;
+    position: relative;
+    top: 5px;
+    width: 120px;
+    height: 43px;
+    font-size: large;
+    border-radius: 5px;
+    background-color: white;
+    outline: none;
+    border: none;
+    color: white;
+   background-color: rgba(248, 246, 247, 0.2);
+
+}
+.thirdbutton button:hover{
+    background-color: rgb(132, 154, 182);
+}
+.thirdbutton span {
+    font-size: 17px;
+}
+
+.fourbutton {
+    margin-left: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+    height: 43px;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    position: relative;
+    top: 5px;
+
+    color: white;
+    background-color: rgb(132, 154, 182);
+}
+
+.fourbutton:hover {
+    background-color: rgb(132, 154, 182);
+}
+
+.fourbutton input {
+    position: relative;
+    left: 5px;
+    display: flex;
+    width: 90%;
+    height: 43px;
+    font-size: large;
+    border-radius: 15px;
+    background-color: white;
+    outline: none;
+    border: none;
+    color: white;
+    background-color: rgb(132, 154, 182);
+
+}
+
+.fourbutton input:hover {
+    background-color: rgb(132, 154, 182);
+}
+
+
+
+.problemcreate {
+    width: 650px;
+
+}
+
+
+.box1div2
+{
+    width:55%;
+    height: 60px;
+    height: 35px;
+    border-radius: 10px;
+    background-color: rgba(248, 246, 247, 0.2);
+      position: relative;
+    left: 10px;
+    
+    
+}
+
+.inbound {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+   
+}
+
+
+.box1div2 ul{
+    display: flex;
+    list-style: none;
+ 
+}
+
+.box1div2 ul li {
+    
+    gap: 10px;
+     width: 26%;
+     display: flex;
+     align-items: center;
+     justify-content: space-around;
+    height: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 16px;
+   
+}
+.box1div3
+{
+    width: 98%;
+    height: 500px;
+   
+      position: relative;
+    left: 10px;
+}
+
+.secondBox
+{
+    position: relative;
+    top: 60px;
+    width: 90%;
+    height: 450px;
+    border-radius: 10px;
+
+  
+}
+.secondBoxBox1
+{
+    width: 100%;
+    height: 60px;
+    
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background-color: white;
+}
+.secondBoxBox1 ul{
+    align-items: center;
+    justify-content:space-around;
+    display: flex;
+    list-style: none;
+    height: 50px;
+   
+}
+.secondBoxBox1 ul li{
+    display:flex;
+    align-items: center;
+    justify-content: start;
+    width: 460px;
+    height: 30px;
+    gap: 10px;
+  
+    padding:2px;
+
+}
+.secondBoxBox1 ul li span{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+
+}
+.secondBoxBox2
+{
+    width: 100%;
+    height: 380px;
+   
+    background-color: rgb(239, 237, 245,1);
+    border-bottom-left-radius: 10px;
+     border-bottom-right-radius: 10px;
+}
+
+.box2
+{
+    width:6%;
+    height: 650px;
+  
+}
+.div1b1 ul {
+    position: relative;
+    top: 15px;
+    left: 15px;
+   
+     
+    width: 50%;
+    height: 140px;
+    list-style: none;
+
+}
+
+.div1b1 ul li {
+    margin-left: 3px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    width: 35px;
+    height: 35px;
+    color: white;
+    border-radius: 50%;
+    background-color: rgba(182, 190, 206, 0.2);
+
+}
+
+.div1b1 ul li:hover {
+    background-color: rgb(219, 225, 236, 0.2);
+}
+
+.div1b2 {
+    width: 100%;
+    height: 220px;
+
+}
+
+.div1b2 ul {
+    width: 100%;
+    height: 220px;
+
+    list-style: none;
+}
+
+.div1b2 ul li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 51px;
+
+
+}
+
+.div1b2 ul li:hover {
+    background-color: rgb(219, 225, 236, 0.2);
+}
+
+.div1b2 ul li div {
+    width: 36px;
+    height: 36px;
+
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    background-color: rgb(47, 198, 246);
+
+}
+.box1div4
+{
+    margin-top: 20px;
+    margin-bottom: 20px;
+ 
+    width:98%;
+    height: 70px;
+}
+.box1div4 ul {
+    width: 60%;
+    height: 60%;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.box1div4 ul li button {
+    width: 90px;
+    height: 30px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: rgba(248, 246, 247, 0.2);
+    font-size: 16px;
 }
