--- a/src/Login.module.css
+++ b/src/Login.module.css
@@ -1,21 +1,27 @@
 .login{
     width: 100%;
-    height: 700px;
-    border: 2px solid black;
+    height: 730px;
+   
    align-items: center;
    justify-content: center;
    display: flex;
    position: absolute;
    top: 0;
    flex-wrap: wrap;
-   background-color: rgb(0,0,0,0.2);
+   background-color: #F0F4F8;
     flex-direction: row;
+}
+.signupdiv button{
+    font-size: 18px;
+}
+.signupdiv button a{
+    text-decoration: none;
 }
 
 .login1{
     width: 35%;
     height: 600px;
-    border: 2px solid black;
+
    align-items: center;
    justify-content: center;
    display: flex;
@@ -49,6 +55,8 @@
     justify-content: center;
     display: flex;
     text-align: center;
+    margin-top: 35px;
+    
 
 }
 
@@ -96,4 +104,15 @@
 .sign p{
     font-size: 25px;
 }
+.logindiv
+{
+    width: 56%;
+    height: 450px;
+    text-align: center; 
+}
+.signupdiv{
+     width: 56%;
+    height: 450px;
+    text-align: center; 
 
+}
